testsuite/c_test/enhancec_test/ENC0126-inline_return_nonnull_check_err/inline_return_nonnull_check_err.c
/*
 * Copyright (c) [2020-2022] Huawei Technologies Co.,Ltd.All rights reserved.
 *
 * OpenArkCompiler is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *
 *     http://license.coscl.org.cn/MulanPSL2
 *
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
 * FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */



#include <stdio.h>
#include <stdlib.h>

__attribute__((returns_nonnull))
SAFE static inline int* Test() {
  return (int*)malloc(sizeof(int)); // CHECK: [[# @LINE ]] error: Test return nonnull but got nullable pointer in safe region when inlined to main
}

SAFE int main() {
  int *p = Test();
  return 0;
}
